Typo in comment
Clarifying a comment. You took a slice rather than the last 100.

Great notebook, very accessible 👍

--- a/Extracting location data for geovisualization.ipynb
+++ b/Extracting location data for geovisualization.ipynb
@@ -268,7 +268,7 @@
     }
    ],
    "source": [
-    "# to save on a little time, let's see what the last 100 look like\n",
+    "# to save on a little time, let's see what a slice of a 100 look like\n",
     "img100 = image_urls[200:300]\n",
     "\n",
     "len(img100)"
